--- a/gcs.yaml
+++ b/gcs.yaml
@@ -12,5 +12,5 @@ spec:
   location: US
   storageClass: MULTI_REGIONAL
   providerConfigRef:
-    name: gcp-provider
+    name: provider-gcp
   deletionPolicy: Delete
